[package]
name = "dp-video-source"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"

url = "2.1.1"
regex = "1.4.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures-util = "0.3.8"
json = "0.12.4"
